[package]
name = "luna-rs"
version = "0.1.0"
edition = "2025"
authors = ["Luna Contributors"]
description = "A Rust rewrite of Luna"
license = "MIT AND MPL-1.1"
repository = "https://github.com/ib729/luna-rs"
exclude = ["Luna/**", "target/**", ".DS_Store"]

[[bin]]
name = "luna-rs"
path = "src/main.rs"

[dependencies]
# Cryptography
des = "0.8"
cipher = "0.4"

# Compression
flate2 = "1.0"
zip = "2"
crc32fast = "1.3"

# Utilities
thiserror = "1.0"
